--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ bin
 obj
 /.vs/sudoku/v17/.suo
 /.vs/sudoku/FileContentIndex/02349e0c-b479-424a-a48b-781de1ce4837.vsidx
+/.vs/sudokuFromJBevain/v17/.wsuo
+/.vs/sudoku/FileContentIndex/02f763ee-eb14-4391-a929-202ccae761ce.vsidx
