--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ obj
 /.vs/sudoku/FileContentIndex/02349e0c-b479-424a-a48b-781de1ce4837.vsidx
 /.vs/sudokuFromJBevain/v17/.wsuo
 /.vs/sudoku/FileContentIndex/02f763ee-eb14-4391-a929-202ccae761ce.vsidx
+/.vs/sudoku/FileContentIndex/0d1b389e-5d68-40df-ae50-3368d4df71ec.vsidx
