--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ obj
 /.vs/sudokuFromJBevain/v17/.wsuo
 /.vs/sudoku/FileContentIndex/02f763ee-eb14-4391-a929-202ccae761ce.vsidx
 /.vs/sudoku/FileContentIndex/0d1b389e-5d68-40df-ae50-3368d4df71ec.vsidx
+/.vs/sudoku/FileContentIndex/048000d0-0610-45cd-abdd-c9dd4963dd2e.vsidx
